# e-gov-api-fastAPI

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  FIX_SUMMARY.md  GITHUB_SETUP.md  README.md  README_DEV.md  README_PHASE4.md  README_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 001_initial_case_tables.py  002_add_fulltext_search_index.py
app/: __init__.py  main.py
app/api/: router.py
app/api/endpoints/: analytics.py  cases.py  conversation.py  laws.py  summarization.py
app/batch/: __init__.py  fetch_cases.py  generate_embeddings.py
app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py
app/db/: __init__.py  base.py  models.py  session.py
app/mcp/: __init__.py  legal_tools.py
app/models/: __init__.py  case.py  law.py
app/repositories/: __init__.py  case_repository.py  embedding_repository.py
app/services/: __init__.py  case_scraper.py  case_service.py  conversation_service.py  court_scraper_playwright.py  egov_client.py  rag_service.py  relationship_analyzer.py  summarization_service.py
app/templates/: index.html
docs/: FULLTEXT_SEARCH.md  IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  SETUP.md
docs/DEV/: DEPLOYMENT_GUIDE.md  infra.md  networks.md
docs/pics/: .gitkeep
docs/rd/: README.md  feature-01-law-api.md  feature-02-case-api.md  feature-03-ai-integration.md  feature-04-advanced-features.md  requirements.md
docs/readmeLang/: README.ar.md  README.en.md  README.fa.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
examples/: playwright_scraper_demo.py  use_legal_tools.py
infra/podmanOrDocker/: Dockerfile  Dockerfile.lite
scripts/: create_vector_indexes.sql  init_db.sql  podman-build.sh  podman-down.sh  podman-up.sh  research_criminal_org_company.py  run-dev.sh  run-prod.sh  setup-uv.sh
tests/: __init__.py  conftest.py  test_api.py  test_conversation_service.py  test_legal_tools.py  test_main.py  test_rag_service.py  test_relationship_analyzer.py  test_summarization_service.py
tests/integration/: test_case_api.py  test_law_api.py
tests/unit/: test_case_repository.py  test_case_scraper.py  test_case_service.py  test_egov_client.py
